day13 selfie machine

--- a/day9_exercise.ipynb
+++ b/day9_exercise.ipynb
@@ -648,9 +648,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO FRAMES\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
@@ -661,6 +669,7 @@
     "\n",
     "vid = cv2.VideoCapture(0)\n",
     "notcapture=True\n",
+    "seq=0\n",
     "while True:\n",
     "    flag, img = vid.read()\n",
     "\n",
@@ -694,9 +703,13 @@
     "                minSize=(50,50)\n",
     "            )\n",
     "            if len(smiles)==1:\n",
-    "               cv2.imwrite('myselfie.png',img)\n",
-    "               notcapture=True\n",
-    "               break\n",
+    "               seq+=1\n",
+    "               if seq==10:\n",
+    "                    cv2.imwrite('myselfie.png',img)\n",
+    "                    notcapture=True\n",
+    "                    break\n",
+    "            else:\n",
+    "                seq=0\n",
     "               \n",
     "\n",
     "\n",
